<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightBrowser</string>
    <string name="action_settings">Settings</string>

    <string name="settings_fullscreen">Full Screen</string>

    <string name="url_hint">Type url here</string>
    <string name="go">Go</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_clearhistory">Clear History</string>
    <string name="menu_settings">Settings</string>

</resources>
