<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/back"
        android:title="@string/menu_back"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/forward"
        android:title="@string/menu_forward"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearhistory"
        android:title="@string/menu_clearhistory"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
